Fix my space menu overflow for when it's more content

--- a/web/src/sass/components/_my_space_menu.scss
+++ b/web/src/sass/components/_my_space_menu.scss
@@ -7,6 +7,7 @@
     height: 100%;
     width: 100%;
     display: none;
+    overflow-y: auto;
 
     @media (min-width: $screen-xl) {
         width: 28rem;
